--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>My personal introduction.</p>
+            <p>I am currently a doctoral student in the School of Biomedical Engineering, Shanghai Jiao Tong University.</p>
             <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+            <p>Literature Review: Conduct an extensive literature review to understand the current state of oral non-absorbable drugs, including their formulations, mechanisms of action, and challenges.
+Experimental design: Design experiments to develop and test drug formulations aimed at non-absorbable oral pathways. It involves exploring various drug delivery systems, such as nanoparticles, microspheres or coatings, to facilitate controlled release or targeted delivery within the gastrointestinal tract.
+Laboratory work: Conducting laboratory experiments, synthesizing drug formulations, evaluating their effectiveness, and studying their behavior in a simulated gastrointestinal environment. Techniques including encapsulation, characterization, drug release kinetics and stability studies are involved.
+Data analysis: Analyze experimental data using statistical methods and specialized software to draw conclusions and identify trends that contribute to the advancement of drug delivery systems.</p>
 
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>Research Methodology: Proficiency in designing and conducting scientific research, including skills in experimental design, data collection, analysis, and interpretation.Drug Development and Formulation Design: Understanding of fundamental principles in drug development, ability to design, test, and optimize formulations and delivery systems for oral non-absorbable drugs.
+Laboratory Skills: Competence in laboratory techniques such as chemical synthesis, drug preparation, material characterization, and proficiency in data collection and analysis.Literature Review and Academic Writing: Capability to conduct comprehensive literature reviews, stay updated with the latest advancements in the field, and articulate research findings into scientific papers or reports.
+Data Analysis and Statistics: Ability to analyze and interpret experimental data using statistical tools and software.Team Collaboration and Communication: Proficiency in working within a team, effective communication, sharing ideas and results, and collaborating with others to address challenges.Problem-Solving Skills: Ability to navigate challenges and solve problems encountered during research, adeptness in seeking innovative solutions</p>
             <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+             <a href="#">Study on oral unabsorbable drugs</a>
             <h2>Contact</h2>
             <p>WYGGGW@163.COM</p>
         </div>
