--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>I am currently a doctoral student in the School of Biomedical Engineering, Shanghai Jiao Tong University.</p>
+            <p>I am currently a doctoral student in the School of Biomedical Engineering, Shanghai Jiao Tong University.If I participate in this program, I may contribute a perspective that lies between technology and social application. I will try to explain complex concepts in more accessible language, while adding real life cases and anecdotes to present them in a more intuitive way. I will share the potential benefits and risks of AI in healthcare and explore its ethical considerations in healthcare decision-making. In addition, I may offer some thoughts on how to promote the intersection of technology and medicine, and how to better make technology serve human health.
+My talk is likely to be divided into several parts: First, a compelling story or real-life case to introduce the topic, then I will briefly introduce the application of AI in healthcare, then discuss its impact and potential challenges in depth, and finally propose some solutions and a vision for the future. The entire presentation is supported by easy-to-understand examples and visual AIDS to ensure that the audience can better understand and relate to the topic.</p>
             <h2>Experience</h2>
             <p>Literature Review: Conduct an extensive literature review to understand the current state of oral non-absorbable drugs, including their formulations, mechanisms of action, and challenges.
 Experimental design: Design experiments to develop and test drug formulations aimed at non-absorbable oral pathways. It involves exploring various drug delivery systems, such as nanoparticles, microspheres or coatings, to facilitate controlled release or targeted delivery within the gastrointestinal tract.
